httproute_treactor-ui.yaml
# Provided
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: treactor-ui
  namespace: default
spec:
  parentRefs:
    - name: gateway
      namespace: treactor
  hostnames: ["treactor.ioto.pe"]
  rules:
    - matches:
        - path:
            type: Exact
            value: /
        - path:
            type: Exact
            value: /index.html
        - path:
            type: Exact
            value: /robot.txt
        - path:
            type: PathPrefix
            value: /static
        - path:
            type: PathPrefix
            value: /treact/reactions
        - path:
            type: PathPrefix
            value: /treact/nodes/500/info
      backendRefs:
        - name: treactor-ui
          port: 3330
